--- a/index.html
+++ b/index.html
@@ -139,6 +139,16 @@
     <td> /event/<code>event_id</code>/ </td>
     <td> Get full detail for event. </td>
 </tr>
+<tr>
+    <td> <a href="#methods/district-search">District Search</a> </td>
+    <td> /districts/<code>state</code>/[<code>chamber</code>/] </td>
+    <td> List districts for state (and optionally filtered by chamber).  </td>
+</tr>
+<tr>
+    <td> <a href="#methods/district-boundary-lookup">District Boundary Lookup</a> </td>
+    <td> /districts/boundary/<code>boundary_id</code>/ </td>
+    <td> Get geographic boundary for a district. </td>
+</tr>
 </table>
 
 <h2 id='requesting-a-custom-fieldset'>Requesting A Custom Fieldset</h2 id='requesting-a-custom-fieldset'>
