--- a/bills.html
+++ b/bills.html
@@ -110,7 +110,7 @@
 <li><code>date</code> Date of action.</li>
 <li><code>action</code> Name of action as state provides it.</li>
 <li><code>actor</code> The chamber, person, committee, etc. responsible for this action.</li>
-<li><code>type</code> Open States-provided action categories, see <a href="#TODO-add-link">action categorization</a>.</li>
+<li><code>type</code> Open States-provided action categories, see <a href="https://github.com/sunlightlabs/openstates/wiki/Categorization#action-types">action categorization</a>.</li>
 </ul>
 </li>
 <li><code>chamber</code> The chamber of origination (&#39;upper&#39; or &#39;lower&#39;)</li>
@@ -119,7 +119,7 @@
 <li><code>documents</code> List of associated documents, see <code>versions</code> for field details.</li>
 <li><code>id</code> Open States-assigned permanent ID for this bill.</li>
 <li><code>scraped_subjects</code> List of subject areas that the state categorized this bill under.</li>
-<li><code>subjects</code> List of Open States-standardized bill subjects, see <a href="#TODO-fix-link">subject categorization</a>.</li>
+<li><code>subjects</code> List of Open States standardized bill subjects, see <a href="https://github.com/sunlightlabs/openstates/wiki/Categorization#subjects">subject categorization</a>.</li>
 <li><code>sources</code> List of source URLs used to compile information on this object.</li>
 <li><code>sponsors</code> List of bill sponsors.<ul>
 <li><code>name</code> Name of sponsor as it appears on state website.</li>
@@ -127,7 +127,7 @@
 <li><code>type</code> Type of sponsor (&#39;primary&#39; or &#39;cosponsor&#39;)</li>
 </ul>
 </li>
-<li><code>type</code>      List of <a href="#TODO-billcategorization">bill types</a>.</li>
+<li><code>type</code>      List of <a href="https://github.com/sunlightlabs/openstates/wiki/Categorization#bill-types">bill types</a>.</li>
 <li><code>versions</code>  Versions of the bill text.  Both documents and <code>versions</code> have the following fields:<ul>
 <li><code>url</code> Official URL for this document.</li>
 <li><code>name</code> An official name for this document.</li>
