--- a/events.html
+++ b/events.html
@@ -98,7 +98,7 @@
 <ul>
 <li><code>id</code>        Open States assigned event ID.</li>
 <li><code>state</code>     State abbreviation.</li>
-<li><code>type</code>      [Categorized event type.](TODO- categorization link here)</li>
+<li><code>type</code>      Categorized event type.  (&#39;committee:meeting&#39; for now)</li>
 <li><code>description</code>   Description of event from state source.</li>
 <li><code>documents</code>     List of related documents.</li>
 <li><code>location</code>      Location if known, as given by state (is often just a room number).</li>
@@ -110,7 +110,7 @@
 <li><code>type</code>      Type of participants (&#39;legislator&#39;, &#39;committee&#39;)</li>
 <li><code>participant</code> String representation of participant (e.g. &#39;Housing Committee&#39;, &#39;Jill Smith&#39;)</li>
 <li><code>id</code>        Open States id for participant if a match was found (e.g. &#39;TXC000150&#39;, &#39;MDL000101&#39;)</li>
-<li><code>type</code>      What role this participant played (e.g. &#39;host&#39;, &#39;speaker&#39;, etc.).</li>
+<li><code>type</code>      What role this participant played (will be &#39;host&#39;, &#39;chair&#39;, &#39;participant&#39;).</li>
 </ul>
 </li>
 <li><code>related_bills</code> List of related bills for this event.  Comprised of the following fields:<ul>
