--- a/index.html
+++ b/index.html
@@ -120,32 +120,32 @@
     <td> Lookup all legislators that serve districts containing a given point. </td>
 </tr>
 <tr>
-    <td> <a href="#methods/committee-search">Committee Search</a> </td>
+    <td> <a href="committees.html#methods/committee-search">Committee Search</a> </td>
     <td> /committees/ </td>
     <td> Search committees by any of their attributes.  </td>
 </tr>
 <tr>
-    <td> <a href="#methods/committee-detail">Committee Detail</a> </td>
+    <td> <a href="committees.html#methods/committee-detail">Committee Detail</a> </td>
     <td> /committees/<code>committee_id</code>/ </td>
     <td> Get full detail for committee, including all members. </td>
 </tr>
 <tr>
-    <td> <a href="#methods/event-search">Event Search</a> </td>
+    <td> <a href="events.html#methods/event-search">Event Search</a> </td>
     <td> /events/ </td>
     <td> Search events by state and type.  </td>
 </tr>
 <tr>
-    <td> <a href="#methods/event-detail">Event Detail</a> </td>
+    <td> <a href="events.html#methods/event-detail">Event Detail</a> </td>
     <td> /event/<code>event_id</code>/ </td>
     <td> Get full detail for event. </td>
 </tr>
 <tr>
-    <td> <a href="#methods/district-search">District Search</a> </td>
+    <td> <a href="districts.html#methods/district-search">District Search</a> </td>
     <td> /districts/<code>state</code>/[<code>chamber</code>/] </td>
     <td> List districts for state (and optionally filtered by chamber).  </td>
 </tr>
 <tr>
-    <td> <a href="#methods/district-boundary-lookup">District Boundary Lookup</a> </td>
+    <td> <a href="districts.html#methods/district-boundary-lookup">District Boundary Lookup</a> </td>
     <td> /districts/boundary/<code>boundary_id</code>/ </td>
     <td> Get geographic boundary for a district. </td>
 </tr>
