--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <li>All API calls are URLs in the form <code>http://openstates.org/api/v1/METHOD/</code></li>
 <li>Responses are <a href="http://json.org">JSON</a> unless otherwise specified.</li>
 <li>If an error occurs the response will be a plain text error message with an appropriate HTTP error code (404 if object is not found, 401 if authentication fails, etc.).</li>
-<li>An API key is required to be passed as request parameter <code>apikey</code>.   A key can be obtained via <a href="http://services.sunlightlabs.com/">http://services.sunlightlabs.com/</a></li>
+<li>An API key is required to be passed as request parameter <code>apikey</code>.   A key can be obtained via <a href="https://sunlightfoundation.com/api/accounts/register/">https://sunlightfoundation.com/api/accounts/register/</a></li>
 <li>All changes to the API will be announced on the <a href="http://groups.google.com/group/fifty-state-project/">Open States Google Group</a>.  It is recommended you subscribe if you&#39;re using the API.</li>
 <li>For Python users, there&#39;s an official <a href="http://python-sunlight.readthedocs.org">python-sunlight</a> package available with full support.</li>
 </ul>
